WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36284
CSS3 negative border-width test fails
https://bugs.webkit.org/show_bug.cgi?id=36284
Summary
CSS3 negative border-width test fails
Simon Fraser (smfr)
Reported
2010-03-17 20:38:18 PDT
This test fails:
http://samples.msdn.microsoft.com/ietestcenter/domstyle/negativeBorderWidth.htm
Attachments
Patch
(2.77 KB, patch)
2010-03-18 09:45 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-03-18 09:45:43 PDT
Created
attachment 51036
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-03-18 09:47:12 PDT
Comment on
attachment 51036
[details]
Patch
> Index: LayoutTests/fast/borders/negative-border-width.html > =================================================================== > --- LayoutTests/fast/borders/negative-border-width.html (revision 0) > +++ LayoutTests/fast/borders/negative-border-width.html (revision 0) > @@ -0,0 +1,28 @@ > +<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "
http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd
">
Garbage there.
> +</html> > \ No newline at end of file
Fix that? r=me
Dave Hyatt
Comment 3
2010-03-18 09:50:20 PDT
Fixed in
r56167
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug