Fix for https://bugs.webkit.org/show_bug.cgi?id=36284.

Reviewed by Simon Fraser.

Make sure the CSS parser properly rejects negative border widths.

Added fast/borders/negative-border-width.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):



Canonical link: https://commits.webkit.org/47461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56167 268f45cc-cd09-0410-ab3c-d52691b4dbfc